# guac-rs

./: .graphqlrc.yaml  .versionrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yaml  rust.yml
cli/: Cargo.toml
cli/src/: certify.rs  collect.rs  collector.rs  main.rs  query.rs
cli/src/collect_sub/: get.rs  mod.rs  poll.rs
cli/src/ingest/: mod.rs  package.rs
cli/src/query/: bad.rs  dependencies.rs  dependents.rs  good.rs  mod.rs  packages.rs  vulnerabilities.rs
cli/tests/: cli.rs
docs/: trustification.md
example/compose/: .env  compose-guac.yaml  compose-trustification.yaml
example/compose/container_files/guac/: guac.yaml
example/queries/: product_by_package.gql  product_by_vulnerability.gql  vulnerabilities_by_product.gql
lib/: Cargo.toml  build.rs
lib/proto/: collectsub.proto
lib/src/: client.rs  cve.rs  dependency.rs  dependent.rs  lib.rs  packages.rs  schema.json  vuln.rs
lib/src/client/: graph.rs  mod.rs  schema.json
lib/src/client/certify_bad/: certify_bad.gql  ingest.rs  mod.rs  query.rs
lib/src/client/certify_good/: certify_good.gql  ingest.rs  mod.rs  query.rs
lib/src/client/certify_vuln/: certify_vuln.gql  ingest.rs  mod.rs  query.rs
lib/src/client/intrinsic/: mod.rs  schema.json
lib/src/client/intrinsic/artifact/: mod.rs
lib/src/client/intrinsic/certify_bad/: certify_bad.gql  ingest.rs  mod.rs  query.rs
lib/src/client/intrinsic/certify_good/: certify_good.gql  ingest.rs  mod.rs  query.rs
lib/src/client/intrinsic/certify_vex/: mod.rs
lib/src/client/intrinsic/certify_vex_statement/: certify_vex_statement.gql  ingest.rs  mod.rs  query.rs
lib/src/client/intrinsic/certify_vuln/: certify_vuln.gql  ingest.rs  mod.rs  query.rs
lib/src/client/intrinsic/has_sbom/: has_sbom.gql  ingest.rs  mod.rs  query.rs
lib/src/client/intrinsic/is_dependency/: ingest.rs  is_dependency.gql  mod.rs  query.rs
lib/src/client/intrinsic/is_dependency/query/: is_dependency.rs  is_dependent.rs
lib/src/client/intrinsic/is_occurence/: mod.rs
lib/src/client/intrinsic/package/: ingest.rs  mod.rs  package.gql  query.rs
lib/src/client/intrinsic/path/: mod.rs  neighbors.rs  node.rs  path.gql
lib/src/client/intrinsic/spog/: mod.rs  query.rs  spog.gql
lib/src/client/intrinsic/vuln_equal/: ingest.rs  mod.rs  query.rs  vuln_equal.gql
lib/src/client/intrinsic/vuln_metadata/: ingest.rs  mod.rs  query.rs  vuln_metadata.gql
lib/src/client/intrinsic/vulnerability/: ingest.rs  mod.rs  query.rs  vulnerability.gql
lib/src/client/is_dependency/: is_dependency.gql  mod.rs
lib/src/client/is_dependency/query/: is_dependency.rs  is_dependent.rs  mod.rs
lib/src/client/osv/: ingest.rs  mod.rs  osv.gql
lib/src/client/package/: ingest.rs  mod.rs  package.gql  query.rs
lib/src/client/semantic/: ingest.rs  mod.rs
lib/src/client/semantic/spog/: find_vulnerability.rs  find_vulnerability_by_sbom_uri.rs  mod.rs  query.rs  spog.gql
lib/src/client/semantic/spog/dependent_product/: mod.rs  query.gql
lib/src/client/vulnerability/: ingest.rs  mod.rs  query.rs  vulnerability.gql
lib/src/collector/: collector.rs  emitter.rs  mod.rs
lib/src/collectsub/: mod.rs
lib/src/graphql/: client.rs  cve.rs  dependency.rs  dependent.rs  good.rs  mod.rs  packages.rs  vuln.rs
lib/src/graphql/mutation/: certify_bad.gql  certify_bad.rs  certify_good.gql  certify_good.rs  certify_vuln.gql  certify_vuln.rs  mod.rs  package.gql  package.rs
lib/src/graphql/query/: certify_bad.gql  certify_bad.rs  certify_good.gql  mod.rs  packages.gql
lib/src/query/: certify_vuln.gql  is_dependency.gql
lib/tests/: certify_bad.rs  certify_good.rs  certify_vex_statement.rs  certify_vuln.rs  client.rs  common.rs  has_sbom.rs  is_dependency.rs  packages.rs  path.rs  spog.rs  vuln_equal.rs  vuln_metadata.rs  vulnerability.rs
src/: client.rs  main.rs  schema.json
