[workspace]
members = [
    "lib",
    "cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.39"
async-nats = "0.33.0"
async-trait = "0.1"
chrono = "0.4.23"
clap = "4.5.0"
colored_json = "4.1.0"
env_logger = "0.11.1"
exporter = { git = "https://github.com/trustification/trustification.git", tag = "v0.1.0-nightly.9382a428" }
graphql_client = "0.13.0"
humantime = "2.1.0"
packageurl = "0.3.0"
prost = "0.12.3"
reqwest = "0.11"
serde = "1.0.114"
serde_json = "1.0.56"
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = "1"
tokio = "1.36.0"
tonic = "0.11.0"
tonic-build = "0.11.0"
