[package]
name = "guac-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A command-line interface for working with [Guac](https://guac.sh)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guac = { path = "../lib" }
anyhow = "1.0.39"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.56"
colored_json = "4.1.0"
clap = { version = "4.5.0", features = ["derive"] }
exporter = { git = "https://github.com/trustification/trustification.git", tag="v0.1.0-nightly.9382a428"}
env_logger = "0.11.1"
humantime = "2.1.0"
packageurl = "0.3.0"

[[bin]]
name = "guac"
path = "src/main.rs"
