[package]
name = "guac-cli"
version = "0.7.2-0"
edition = "2021"
license = "Apache-2.0"
description = "A command-line interface for working with [Guac](https://guac.sh)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guac = { path = "../lib" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
colored_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
exporter = { git = "https://github.com/trustification/trustification.git", tag = "v0.1.0-nightly.9382a428" }
env_logger = { workspace = true }
humantime = { workspace = true }
packageurl = { workspace = true }

[[bin]]
name = "guac"
path = "src/main.rs"
