[package]
name = "guac"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A library that provides toolkit for working with [Guac](https://guac.sh) from Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = {version = "0.12.0", features = ["reqwest"]}
reqwest = { version = "^0.11", features = ["json"] }
anyhow = "1.0.39"
log = "^0.4"
serde = "1.0.114"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
packageurl = { version = "0.3.0", features = ["serde"] }
async-trait = "0.1"
async-nats = "0.29.0"
serde_json = "1.0.56"
thiserror = "1"
tonic = "0.9.2"
prost = "0.11.9"
async-std = "1.12.0"
strum = "0.25"
strum_macros = "0.25"

[dev-dependencies]
tokio = "1.29.1"

[build-dependencies]
tonic-build = "0.9.2"