[package]
name = "guac"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A library that provides toolkit for working with [Guac](https://guac.sh) from Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = {version = "0.13.0", features = ["reqwest"]}
reqwest = { version = "^0.11", features = ["json"] }
anyhow = "1.0.39"
serde = "1.0.114"
chrono = { version = "0.4.23", features = ["serde"] }
packageurl = { version = "0.3.0", features = ["serde"] }
async-trait = "0.1"
async-nats = "0.33.0"
serde_json = "1.0.56"
thiserror = "1"
tonic = "0.11.0"
prost = "0.12.3"
strum = "0.26.1"
strum_macros = "0.26.1"

[dev-dependencies]
tokio = "1.36.0"

[build-dependencies]
tonic-build = "0.11.0"