[package]
name = "guac"
version = "0.7.2-0"
edition = "2021"
license = "Apache-2.0"
description = "A library that provides toolkit for working with [Guac](https://guac.sh) from Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { workspace = true, features = ["reqwest"] }
reqwest = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
packageurl = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
async-nats = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
native-tls = "=0.2.11"
zerofrom = "=0.1.5"
litemap = "=0.7.4"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
